--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^4.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
